# takproto

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.rst  mkdocs.yml  setup.cfg  stdeb.cfg
docs/: index.md  installation.md  origin.md  tak_protocols.md  usage.md
takproto/: __init__.py  constants.py  functions.py
tests/: test_functions.py
