# Setup for the Python TAK Protocol Packet - Version 1 Module.
# setup.cfg from https://github.com/snstac/takproto
#
# Copyright Sensors & Signals LLC https://www.snstac.com
# Copyright 2020 Delta Bravo-15
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#


[metadata]
name = takproto
version = attr: takproto.__version__
url = https://github.com/snstac/takproto
project_urls =
  CI: GitHub Actions = https://github.com/snstac/takproto/actions
  GitHub: issues = https://github.com/snstac/takproto/issues
  GitHub: repo = https://github.com/snstac/takproto
description = TAKProto is a Python package to encode and decode TAK data.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = MIT License
license_files = LICENSE
classifiers =
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  iTAK
  TAK Server
  TAKX
  Protobuf


[options]
python_requires = >=3.6, <4
packages = takproto, takproto.proto
package_dir = 
  takproto = takproto
install_requires = 
  protobuf >= 4.21.0


[options.extras_require]
test = 
  pytest-cov
  pylint
  flake8
  black
